objects/Scheduled_Agreements__c.object
<CustomObject>
    <description>Captures information to allow users to measure the accuracy of customer provided forecast (Schedule Agreements) as compared to demand.  Currently CSD only.</description>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Month_Text__c</fullName>
        <label>Fiscal Month Text</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Month__c</fullName>
        <label>Fiscal Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Week__c</fullName>
        <label>Fiscal Week</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Amount_Document__c</fullName>
        <label>Forecast Amount Document</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Amount_USD__c</fullName>
        <label>Forecast Amount USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecast_Quantity__c</fullName>
        <label>Forecast Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GPL_Family__c</fullName>
        <label>GPL Family</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Load_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Load Status</label>
        <referenceTo>Load_Status__c</referenceTo>
        <relationshipLabel>Scheduled Agreements</relationshipLabel>
        <relationshipName>Scheduled_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <label>Part</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Scheduled Agreements</relationshipLabel>
        <relationshipName>Scheduled_Agreements</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Plant_Id__c</fullName>
        <label>Plant Id</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_Name__c</fullName>
        <label>Plant Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Agreements_External_Key__c</fullName>
        <externalId>true</externalId>
        <label>Scheduled Agreements External Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Scheduled Agreements</relationshipLabel>
        <relationshipName>Scheduled_Agreements_Ship_To</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_To_Customer__c</fullName>
        <label>Sold To Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Scheduled Agreements (Sold To Customer)</relationshipLabel>
        <relationshipName>Scheduled_Agreements_Sold_To</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Scheduled Agreements</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SA-{0}</displayFormat>
        <label>Scheduled Agreements Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>